[tool.poetry]
name = "gpx-track-render-er"
version = "0.1.0"
description = ""
authors = ["Ieuan Jenkins <hi@ieuan.net>"]

[tool.poetry.dependencies]
python = "^3.9"
gpxpy = "^1.4.2"
geopy = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
