[tool.poetry]
name = "gpx-track-render-er"
version = "0.1.0"
description = ""
authors = ["Ieuan Jenkins <hi@ieuan.net>"]

[tool.poetry.dependencies]
python = "^3.9"
gpxpy = "^1.4.2"
geopy = "^2.2.0"
Faker = "^13.3.5"
pytz = "^2021.1"
PyYAML = "^5.4.1"
confuse = "^1.5.0"
isodate = "^0.6.0"
"SRTM.py" = "^0.3.6"
mailbox = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
